--- a/qna.html
+++ b/qna.html
@@ -16,7 +16,7 @@
 		<header class="col-12 col-m-12 upperheader">
 			<a href="main.html">PASS</a>
 		</header>
-				<nav class="w3-bar w3-green">
+		<nav class="w3-bar w3-green">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile"
 				href="main.html" style="width: 8%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile"
@@ -34,25 +34,44 @@
 		</nav>
 	</div>
 	<div class="row">
-		<section class="col-12 col-m-12 padding">
-			<h3>자주 묻는 질문</h3>
+		<section class="col-12 col-m-12 padding_3">
+			<b><h3>자주 묻는 질문</h3></b>
 			<div>
 				<p>
-					Q1. <q>부팅이 안 되는 경우</q>
+					<b> Q1. <q>+/- 단자 구별 방법</q></b>
 				</p>
-				<p>A1. 부팅이 되지 않는 경우에는 먼저 1. 컴퓨터의 조립 설명서대로 하였는지 확인 2. 부팅 시 BIOS화면에서....</p>
+				<p>- A1. 주로 색으로 표현되어 있으나 간혹 삼각형과 같은 도형으로 표시되어 있는 경우가 있습니다. 그럴 경우
+					표시된 쪽이 주로 +단자입니다. (색으로 표시되어 있을 경우엔 빨간색 선이 +단자)</p>
 			</div>
 			<div>
 				<p>
-					Q2. <q>다헌언니가 어디 간 경우</q>
+					<b> Q2. <q>백 패널 넣는 방법</q></b>
 				</p>
-				<p>A2. 김가인 이현정 차지헌이 열심히 하고 그 후에 다헌언니에게 토스해버린다.</p>
+				<p>- A2. 주변 장치의 포트의 모양과 크기에 맞추어 케이스 안에서부터 바깥 방향으로 밀어 끼웁니다. 아래쪽부터
+					끼우고 그 다음에 윗부분을 끼우는 것이 더 장착하기 쉽습니다.</p>
 			</div>
 			<div>
 				<p>
-					Q3. <q>배고픈 경우</q>
+					<b> Q3. <q> CMOS BIOS에서 시스템 종료의 가능 여부</q></b>
 				</p>
-				<p>A3. 다이어트를 하고 있는 경우에는 바나나, 토마토 등을 좀 먹어주거나 참고 운동한다. 그래야 살빠짐</p>
+				<p>- A3. CMOS BIOS는 따로 시스템을 종료할 수 있는 기능이 없으므로 본체의 파워 버튼을 이용해
+					종료시켜야 합니다.</p>
+			</div>
+			<div>
+				<p>
+					<b> Q4. <q> 부품 조립이 끝난 후 전원이 안 켜지는 경우</q></b>
+				</p>
+				<p>- A4. 1) 파워 서플라이의 전원 커넥터의 연결상태를 확인한다. 2) Power SW 단자, Power
+					LED 단자, HDD LED 단자, RESET 단자, HD AUDIO 단자, SPEAKER 단자 등의 연결이 제대로 되어
+					있는지 확인한다. 3) RAM과 CPU 등의 주요 장치도 제대로 장착되어 있는지 확인한다.</p>
+			</div>
+			<div>
+				<p>
+					<b> Q5. <q> USB 연결 포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할
+							연결 방법</q></b>
+				</p>
+				<p>- A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다. 3.0을 지원할 경우 3.0포트 하나에만
+					연결해야 하고 2.0을 지원할 경우엔 2.0포트 두 개에 연결하면 됩니다.</p>
 			</div>
 		</section>
 	</div>
