--- a/qna.html
+++ b/qna.html
@@ -34,7 +34,7 @@
 		</nav>
 	</div>
 	<div class="row">
-		<section class="col-12 col-m-12 padding_3">
+		<section class="col-12 col-m-12 padding-2">
 			<b><h3>자주 묻는 질문</h3></b>
 			<div>
 				<p>
