--- a/keyexpl.html
+++ b/keyexpl.html
@@ -93,13 +93,12 @@
 
 키보드의 경우 매장에서 직접 눌러보고 자신에게 맞는 키감의 키보드를 사는 것이 좋다.
 
+* 아래는 기계식 키보드의 축 설명
 		</pre>
 			<img
-				src="http://postfiles5.naver.net/MjAxNzA4MjFfMTUg/MDAxNTAzMzAzMjkxNzEz.ZLsYTG_Q3oi_RpSP4akxaoQyIIdGUg3uo0DD4bQnEv4g.v9Ils_ccfUA1mTStCbCDLVe0rM7U2RNeNFce8yv6Hvwg.JPEG.puppy0312/KakaoTalk_20170821_170838403.jpg?type=w773"
-				title="http://postfiles5.naver.net/MjAxNzA4MjFfMTUg/MDAxNTAzMzAzMjkxNzEz.ZLsYTG_Q3oi_RpSP4akxaoQyIIdGUg3uo0DD4bQnEv4g.v9Ils_ccfUA1mTStCbCDLVe0rM7U2RNeNFce8yv6Hvwg.JPEG.puppy0312/KakaoTalk_20170821_170838403.jpg?type=w773"
+				src="https://goo.gl/5dDUwi"
+				title="https://goo.gl/5dDUwi"
 				alt="KEYBOARD2" />
-
-
 		</section>
 	</div>
 	<div class="row">
