--- a/aboutus.html
+++ b/aboutus.html
@@ -37,8 +37,20 @@
 		<section class="col-12 col-m-12 padding-2">
 			<b>
 				<h2>ABOUT US</h2>
-			</b>
-			<div></div>
+			</b> <img class="expl" src="" title="" alt="LOGO" />
+			<div>
+				<pre>
+성신여자대학교 SUNGSHIN WOMEN’S UNIVERSTIY
+IT학부 INFORMATION TECHNOLOGY
+<b>LEE</b> hyunjung
+<b>CHA</b> jihun
+kim <b>GA</b> in
+choi <b>DA</b> hun
+
+2017년 8월 교내 소프트웨어 경진대회 출전
+2017년 3~6월 성신 스터디 참여
+			</pre>
+			</div>
 		</section>
 	</div>
 	<div class="row">
