assemble guide changed

--- a/assemble.html
+++ b/assemble.html
@@ -37,8 +37,13 @@
 	<div class="row">
 		<div class="w3-mobile" id="mySidebar">
 			<button onclick="w3_close()" class="w3-button">Close&times;</button>
-			<a href="assemble.html" class="w3-button w3-mobile">조립 부품 정보</a> <a
-				href="assemble2.html" class="w3-button w3-mobile">조립 가이드</a>
+			<a href="assemble.html" class="w3-button w3-mobile">1. 준비물 준비</a> <a
+				href="assemble2.html" class="w3-button w3-mobile">2. 메인보드에 CPU,
+				CPU 쿨러, RAM 장착</a> <a href="assemble3.html" class="w3-button w3-mobile">3.
+				케이스 분리 후 케이스에 PSU, 메인보드 장착</a> <a href="assemble4.html"
+				class="w3-button w3-mobile">4. 케이스에 ODD, SSD 장착</a> <a
+				href="assemble5.html" class="w3-button w3-mobile">5. 부품들 간의 케이블
+				연결 및 선 정리</a>
 		</div>
 	</div>
 	<div class="row w3-main" id="main">
@@ -46,41 +51,62 @@
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
 					onclick="w3_open()">☰ PC 조립 가이드</button>
-				<h3 class="w3-container">1. 조립 부품 정보</h3>
+				<h3 class="w3-container">1. 준비물 준비</h3>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
 					<img class="expl" src="" title="" alt="1" />
-					<div class="w3-display-bottom">사용한 부품 사진</div>
+					<div class="w3-display-bottom">
+						<pre>조립에 사용한 부품들.
+					
+기본적으로 메인보드, CPU, PSU, HDD/SSD 등의 메모리, RAM, 케이스 등은 필수로 구매해야 하는 부품이며,
+옵션으로 ODD, VGA(그래픽카드) 등을 추가 장착할 수 있다.
+					
++참고) 사진은 ODD 추가, VGA 제외</pre>
+					</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
 					<img class="expl" src="" title="" alt="2" />
-					<div class="w3-display-bottom">사용한 부품 사진</div>
+					<div class="w3-display-bottom">조립에 사용된 메인보드</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
 					<img class="expl" src="" title="" alt="3" />
-					<div class="w3-display-bottom">사용한 부품 사진</div>
+					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
 					<img class="expl" src="" title="" alt="4" />
-					<div class="w3-display-bottom">사용한 부품 사진</div>
+					<div class="w3-display-bottom">조립에 사용된 SSD</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
 					<img class="expl" src="" title="" alt="5" />
-					<div class="w3-display-bottom">사용한 부품 사진</div>
+					<div class="w3-display-bottom">조립에 사용된 RAM</div>
+				</div>
+			</div>
+
+			<div class=w3-center>
+				<div class="mySlides">
+					<img class="expl" src="" title="" alt="6" />
+					<div class="w3-display-bottom">조립에 사용된 케이스</div>
+				</div>
+			</div>
+
+			<div class=w3-center>
+				<div class="mySlides">
+					<img class="expl" src="" title="" alt="7" />
+					<div class="w3-display-bottom">조립에 사용된 ODD</div>
 				</div>
 			</div>
 
@@ -96,6 +122,8 @@
 				<button class="w3-button demo" onclick="currentDiv(3)">3</button>
 				<button class="w3-button demo" onclick="currentDiv(4)">4</button>
 				<button class="w3-button demo" onclick="currentDiv(5)">5</button>
+				<button class="w3-button demo" onclick="currentDiv(6)">6</button>
+				<button class="w3-button demo" onclick="currentDiv(7)">7</button>
 			</div>
 
 		</section>
