--- a/assemble4.html
+++ b/assemble4.html
@@ -43,7 +43,7 @@
 				케이스 분리 후 케이스에 PSU, 메인보드 장착</a> <a href="assemble4.html"
 				class="w3-button w3-mobile">4. 케이스에 ODD, SSD 장착</a> <a
 				href="assemble5.html" class="w3-button w3-mobile">5. 부품들 간의 케이블
-				정리</a>
+				정리 후 부팅해보기</a>
 		</div>
 	</div>
 	<div class="row w3-main" id="main">
