--- a/aboutus.html
+++ b/aboutus.html
@@ -40,6 +40,7 @@
 			</b> <img class="expl" src="" title="" alt="LOGO" />
 			<div>
 				<pre>
+<b>LEECHAGADA</b>				
 성신여자대학교 SUNGSHIN WOMEN’S UNIVERSTIY
 IT학부 INFORMATION TECHNOLOGY
 <b>LEE</b> hyunjung
@@ -47,6 +48,7 @@ IT학부 INFORMATION TECHNOLOGY
 kim <b>GA</b> in
 choi <b>DA</b> hun
 
+<b>경력</b> PROFILE
 2017년 8월 교내 소프트웨어 경진대회 출전
 2017년 3~6월 성신 스터디 참여
 			</pre>
