--- a/assemble2.html
+++ b/assemble2.html
@@ -60,7 +60,7 @@
 					<div class="w3-display-bottom">
 						<pre>메인보드에 CPU와 쿨러 장착하기
 					
--CPU 소켓 덮개 여는	법 (가능하면 동영상, 사진 둘 다 첨부) 
+-CPU 소켓 덮개 여는 법 
 -덮개에서 삼각형 부분이 아래에 가게 할 것 
 -CPU 장착하고 덮개 덮을 때 세게 눌러야 함(Q&A에 써도 괜찮음) 
 -쿨러에 연결된 케이블이 팬에 안 걸리게 조심할 것 
