--- a/assemble.html
+++ b/assemble.html
@@ -52,7 +52,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/WCnGNN" title="https://goo.gl/WCnGNN" alt="조립부품들" />
+					<img   src="https://goo.gl/WCnGNN" title="https://goo.gl/WCnGNN" alt="조립부품들" />
 					<div class="w3-display-bottom">
 						<pre>조립에 사용한 부품들.
 					
@@ -66,66 +66,73 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/4Y8ek1" title="https://goo.gl/4Y8ek1" alt="motherboard" />
+					<img   src="https://goo.gl/4Y8ek1" title="https://goo.gl/4Y8ek1" alt="motherboard" />
 					<div class="w3-display-bottom">조립에 사용된 메인보드</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/kZb257" title="https://goo.gl/kZb257" alt="motherboardDetail" />
+					<img   src="https://goo.gl/kZb257" title="https://goo.gl/kZb257" alt="motherboardDetail" />
 					<div class="w3-display-bottom">조립에 사용된 메인보드</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/Lh7MyD" title="https://goo.gl/Lh7MyD" alt="CPU" />
+					<img   src="https://goo.gl/Lh7MyD" title="https://goo.gl/Lh7MyD" alt="CPU" />
 					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/jCwMwe" title="https://goo.gl/jCwMwe" alt="CPUwithCooler" />
+					<img   src="https://goo.gl/jCwMwe" title="https://goo.gl/jCwMwe" alt="CPUwithCooler" />
 					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/eYRmT7" title="https://goo.gl/eYRmT7" alt="CPUDetail" />
+					<img   src="https://goo.gl/eYRmT7" title="https://goo.gl/eYRmT7" alt="CPUDetail" />
 					<div class="w3-display-bottom">조립에 사용된 CPU</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/FPoiYB" title="https://goo.gl/FPoiYB" alt="SSD" />
+					<img   src="https://goo.gl/FPoiYB" title="https://goo.gl/FPoiYB" alt="SSD" />
 					<div class="w3-display-bottom">조립에 사용된 SSD</div>
 				</div>
 			</div>
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/JkvweJ" title="https://goo.gl/JkvweJ" alt="SSDDetail" />
+					<img   src="https://goo.gl/JkvweJ" title="https://goo.gl/JkvweJ" alt="SSDDetail" />
 					<div class="w3-display-bottom">조립에 사용된 SSD</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/Yvgs6H" title="https://goo.gl/Yvgs6H" alt="RAM" />
+					<img   src="https://goo.gl/Yvgs6H" title="https://goo.gl/Yvgs6H" alt="RAM" />
 					<div class="w3-display-bottom">조립에 사용된 RAM</div>
 				</div>
 			</div>
+			
+			<div class=w3-center>
+				<div class="mySlides">
+					<img   src="https://goo.gl/2KVJEH" title="https://goo.gl/2KVJEH" alt="ODD" />
+					<div class="w3-display-bottom">조립에 사용된 파워서플라이</div>
+				</div>
+			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/oHGEuK" title="https://goo.gl/oHGEuK" alt="case" />
+					<img   src="https://goo.gl/oHGEuK" title="https://goo.gl/oHGEuK" alt="case" />
 					<div class="w3-display-bottom">조립에 사용된 케이스</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="https://goo.gl/rCiQsR" title="https://goo.gl/rCiQsR" alt="ODD" />
+					<img   src="https://goo.gl/rCiQsR" title="https://goo.gl/rCiQsR" alt="ODD" />
 					<div class="w3-display-bottom">조립에 사용된 ODD</div>
 				</div>
 			</div>
