--- a/component.html
+++ b/component.html
@@ -18,8 +18,7 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+			<a class="colorwhite w3-bar-item w3-button w3-mobile"
 				href="main.html" style="width: 8%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
@@ -61,7 +60,8 @@
 				src="http://imgnews.naver.net/image/092/2008/11/09/nehalem_01.jpg?type=w540"
 				title="http://imgnews.naver.net/image/092/2008/11/09/nehalem_01.jpg?type=w540"
 				alt="CPU" />
-			<pre class="w3-container">
+			<div>
+				<pre class="w3-container">
 <b><q>정의</q></b>
 
 중앙처리장치라는 뜻으로, 컴퓨터의 정중앙에서 모든 데이터를 처리하는 장치이다.
@@ -149,7 +149,7 @@ U : 저전력 모바일 프로세서
 –AMD: A, 754, 939, AM2, AM2+, AM3, AM3+, FM1, FM2, FM2+, AM4(현재)
 –Intel: 478, LGA775, LGA1150, LGA1151(현재), LGA1155, LGA1156, LGA1356, LGA1366, LGA2011
 		</pre>
-
+			</div>
 		</section>
 	</div>
 	<div class="row">
