--- a/main.html
+++ b/main.html
@@ -19,22 +19,22 @@
 		</header>
 	</div>
 	<div class="row">
-		<nav class="w3-bar w3-green  w3-large">
+		<nav class="w3-bar w3-green w3-large">
 			<a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile "
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile "
 				href="main.html" style="width: 8%">HOME</a> <a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile"
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile"
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile"
 				href="assemble.html" style="width: 15%">PC 조립 가이드</a> <a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile"
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile"
 				href="booting.html" style="width: 15%">PC 부팅 가이드</a> <a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile"
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile"
 				href="recommendation.html" style="width: 18%">용도별 조립 PC 추천</a> <a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile"
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile"
 				href="qna.html" style="width: 17%">자주 묻는 질문</a> <a
-				class="w3-padding-32 colorwhite w3-bar-item w3-button w3-mobile w3-right"
-				href="aboutus.html" style="width: 10%">ABOUT US</a>
+				class="w3-padding-32 colorwhite w3-bar-item w3-hover-light-grey w3-button w3-mobile"
+				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
 	<div class="row">
