--- a/qna.html
+++ b/qna.html
@@ -10,6 +10,8 @@
 <!-- [if lt IE 9]>
         <script src="html5shiv.js"></script>
    <![endif]-->
+<script type="text/javascript" src="loadXML.js"></script>
+
 </head>
 <body>
 	<div class="row">
@@ -35,49 +37,58 @@
 	</div>
 	<div class="row">
 		<section class="col-12 col-m-12 padding-2">
-			<b><h3>자주 묻는 질문</h3></b>
-			<div>
-				<p>
-					<b> Q1. <q>+/- 단자 구별 방법</q></b>
-				</p>
-				<p>- A1. 주로 색으로 표현되어 있으나 간혹 삼각형과 같은 도형으로 표시되어 있는 경우가 있습니다. 그럴 경우
+			<h3>자주 묻는 질문</h3>
+
+			<button onclick="myFunction('Demo1')"
+				class="w3-button w3-block w3-white w3-left-align">Q1. +/-단자 구별
+				방법</button>
+			<div id="Demo1" class="w3-container w3-hide">
+				<p>A1. 주로 색으로 표현되어 있으나 간혹 삼각형과 같은 도형으로 표시되어 있는 경우가 있습니다. 그럴 경우
 					표시된 쪽이 주로 +단자입니다. (색으로 표시되어 있을 경우엔 빨간색 선이 +단자)</p>
 			</div>
-			<div>
-				<p>
-					<b> Q2. <q>백 패널 넣는 방법</q></b>
-				</p>
-				<p>- A2. 주변 장치의 포트의 모양과 크기에 맞추어 케이스 안에서부터 바깥 방향으로 밀어 끼웁니다. 아래쪽부터
+
+			<button onclick="myFunction('Demo2')"
+				class="w3-button w3-block w3-white w3-left-align">Q2. 백 패널 넣는
+				방법</button>
+			<div id="Demo2" class="w3-container w3-hide">
+				<p>A2. 주변 장치의 포트의 모양과 크기에 맞추어 케이스 안에서부터 바깥 방향으로 밀어 끼웁니다. 아래쪽부터
 					끼우고 그 다음에 윗부분을 끼우는 것이 더 장착하기 쉽습니다.</p>
 			</div>
-			<div>
-				<p>
-					<b> Q3. <q> CMOS BIOS에서 시스템 종료의 가능 여부</q></b>
-				</p>
-				<p>- A3. CMOS BIOS는 따로 시스템을 종료할 수 있는 기능이 없으므로 본체의 파워 버튼을 이용해
-					종료시켜야 합니다.</p>
+
+			<button onclick="myFunction('Demo3')"
+				class="w3-button w3-block w3-white w3-left-align">Q3. CMOS
+				BIOS에서 시스템 종료의 가능 여부</button>
+			<div id="Demo3" class="w3-container w3-hide">
+				<p>A3. CMOS BIOS는 따로 시스템을 종료할 수 있는 기능이 없으므로 본체의 파워 버튼을 이용해 종료시켜야
+					합니다.</p>
 			</div>
-			<div>
-				<p>
-					<b> Q4. <q> 부품 조립이 끝난 후 전원이 안 켜지는 경우</q></b>
-				</p>
-				<p>- A4. 1) 파워 서플라이의 전원 커넥터의 연결상태를 확인한다. 2) Power SW 단자, Power
-					LED 단자, HDD LED 단자, RESET 단자, HD AUDIO 단자, SPEAKER 단자 등의 연결이 제대로 되어
-					있는지 확인한다. 3) RAM과 CPU 등의 주요 장치도 제대로 장착되어 있는지 확인한다.</p>
+
+			<button onclick="myFunction('Demo4')"
+				class="w3-btn w3-block w3-white w3-left-align">Q4. 부품 조립이
+				끝난 후 전원이 안 켜지는 경우</button>
+			<div id="Demo4" class="w3-container w3-hide">
+				<p>A4.</p>
+				<p>1) 파워 서플라이의 전원 커넥터의 연결상태를 확인한다.</p>
+				<p>2) Power SW 단자, Power LED 단자, HDD LED 단자, RESET 단자, HD AUDIO
+					단자, SPEAKER 단자 등의 연결이 제대로 되어 있는지 확인한다.</p>
+				<p>3) RAM과 CPU 등의 주요 장치도 제대로 장착되어 있는지 확인한다.</p>
 			</div>
-			<div>
-				<p>
-					<b> Q5. <q> USB 연결 포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할
-							연결 방법</q></b>
-				</p>
-				<p>- A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다. 3.0을 지원할 경우 3.0포트 하나에만
-					연결해야 하고 2.0을 지원할 경우엔 2.0포트 두 개에 연결하면 됩니다.</p>
+
+			<button onclick="myFunction('Demo5')"
+				class="w3-button w3-block w3-white w3-left-align">Q5. USB 연결
+				포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할 연결 방법</button>
+			<div id="Demo5" class="w3-container w3-hide">
+				<p>A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다. 3.0을 지원할 경우 3.0포트 하나에만 연결해야 하고
+					2.0을 지원할 경우엔 2.0포트 두 개에 연결하면 됩니다.</p>
 			</div>
-		</section>
 	</div>
-	<div class="row">
-		<footer class="col-12 col-m-12"> copyright 2017. LEECHAGADA.
-			All rights reserved.</footer>
-	</div>
+
+</body>
+</section>
+</div>
+<div class="row">
+	<footer class="col-12 col-m-12"> copyright 2017. LEECHAGADA.
+		All rights reserved.</footer>
+</div>
 </body>
 </html>
