--- a/qna.html
+++ b/qna.html
@@ -64,7 +64,7 @@
 			</div>
 
 			<button onclick="myFunction('Demo4')"
-				class="w3-btn w3-block w3-white w3-left-align">Q4. 부품 조립이
+				class="w3-button w3-block w3-white w3-left-align">Q4. 부품 조립이
 				끝난 후 전원이 안 켜지는 경우</button>
 			<div id="Demo4" class="w3-container w3-hide">
 				<p>A4.</p>
