설명참조 연습

--- a/assemble2.html
+++ b/assemble2.html
@@ -59,14 +59,7 @@
 					<img src="https://goo.gl/yR7BPf" title="https://goo.gl/yR7BPf"
 						alt="motherboard_CPU1" />
 					<div class="w3-display-bottom">
-						<pre>메인보드에 CPU와 쿨러 장착하기
-					
--CPU 소켓 덮개 여는 법 
--덮개에서 삼각형 부분이 아래에 가게 할 것 
--CPU 장착하고 덮개 덮을 때 세게 눌러야 함(Q&A에 써도 괜찮음) 
--쿨러에 연결된 케이블이 팬에 안 걸리게 조심할 것 
--쿨러 장착 시 메인보드와 딱 들어맞는 소리가 남. 
--쿨러 케이블 연결(4핀으로 되어있음)</pre>
+						<pre>빨간색으로 표시된 부분이 CPU 소켓을 열기 위한 레버 부분이다.</pre>
 					</div>
 				</div>
 			</div>
