설멍참조 띄어쓰기 확인

--- a/assemble2.html
+++ b/assemble2.html
@@ -131,7 +131,7 @@
 					<img src="https://goo.gl/bRUAv1" title="https://goo.gl/bRUAv1" alt="motherboard_RAM2" />
 					<div class="w3-display-bottom">
 						<pre>RAM 모듈을 장착하기 위해서는 위에서 보이는 슬롯의 끝 부분에 있는 레버를 젖혀서 열어야 한다.
-						(레버가 슬롯의 양 끝에 있는 경우에는 양 끝의 레버 모두 젖혀야 한다)</pre>
+(레버가 슬롯의 양 끝에 있는 경우에는 양 끝의 레버 모두 젖혀야 한다)</pre>
 					</div>
 				</div>
 			</div>
@@ -141,8 +141,7 @@
 					<img src="https://goo.gl/1ze8GD" title="https://goo.gl/1ze8GD" alt="motherboard_RAM23" />
 					<div class="w3-display-bottom">
 						<pre>RAM 모듈을 삽입할 경우에는 위에서 수직으로 꽂아야 한다. 슬롯에 맞게 끼운 뒤, 양손의 엄지 손가락으로 양 끝의 윗부분을 번갈아가며 꾹 눌러준다.
-						RAM 모듈이 슬롯에 완전히 들어가면 젖혔던 레버가 자동으로 오므라져 닫힌다.
-						위의 사진은 RAM 모듈이 장착된 모습니다.</pre>
+RAM 모듈이 슬롯에 완전히 들어가면 젖혔던 레버가 자동으로 오므라져 닫힌다. 위의 사진은 RAM 모듈이 장착된 모습니다.</pre>
 					</div>
 				</div>
 			</div>
