--- a/aboutus.html
+++ b/aboutus.html
@@ -37,18 +37,21 @@
 		<section class="col-12 col-m-12 padding-2">
 			<b>
 				<h2>ABOUT US</h2>
-			</b> <img class="expl" src="" title="" alt="LOGO" />
+			</b> <img class="logo" src="https://goo.gl/m5XoZY"
+				title="https://goo.gl/m5XoZY" alt="LOGO" />
 			<div>
 				<pre>
-<b>LEECHAGADA</b>				
+				
+				
+<h4><b>이차가다 LEECHAGADA</b></h4>
 성신여자대학교 SUNGSHIN WOMEN’S UNIVERSTIY
 IT학부 INFORMATION TECHNOLOGY
-<b>LEE</b> hyunjung
-<b>CHA</b> jihun
-kim <b>GA</b> in
-choi <b>DA</b> hun
+이현정 <b>LEE</b> hyunjung
+차지헌 <b>CHA</b> jihun
+김가인 kim <b>GA</b> in
+최다헌 choi <b>DA</b> hun
 
-<b>경력</b> PROFILE
+<h4><b>경력</b> PROFILE</h4>
 2017년 8월 교내 소프트웨어 경진대회 출전
 2017년 3~6월 성신 스터디 참여
 			</pre>
