--- a/aboutus.html
+++ b/aboutus.html
@@ -54,6 +54,13 @@ IT학부 INFORMATION TECHNOLOGY
 <h4><b>경력</b> PROFILE</h4>
 2017년 8월 교내 소프트웨어 경진대회 출전
 2017년 3~6월 성신 스터디 참여
+
+<b>참고</b> REFERENCE
+<a href="http://www.danawa.com/">다나와닷컴 : http://www.danawa.com/</a>
+<a>성신여대 IT학부 김도형 교수님 PC조립 자료 : PC_Assembly_2016.pdf</a>
+<a href=""></a>
+<a href=""></a>
+<a href=""></a>
 			</pre>
 			</div>
 		</section>
