assemble3 내용 최종 수정

--- a/assemble3.html
+++ b/assemble3.html
@@ -59,7 +59,8 @@
 					<img   src="https://goo.gl/eEtHdw" title="https://goo.gl/eEtHdw" alt="caseoff" />
 					<div class="w3-display-bottom">
 						<pre>MB에 CPU와 RAM을 장착한 이후에는 따로 정해진 순서가 없다. 하지만 MB를 보호하기 위해 PSU를 먼저 장착하는 것을 선호한다.
-PSU를 장착하기 위해서는 케이스를 분리해야 한다. 빨간색으로 표시된 부분이 케이스의 나사이다. 이것을 풀면 케이스 옆면이 분리된다. 이 때 케이스 옆면을 뒤로 살짝 당기면서 분리해야 한다.</pre>
+PSU를 장착하기 위해서는 케이스를 분리해야 한다. 빨간색으로 표시된 부분이 케이스의 나사이다.
+이것을 풀면 케이스 옆면이 분리된다. 이 때 케이스 옆면을 뒤로 살짝 당기면서 분리해야 한다.</pre>
 					</div>
 				</div>
 			</div>
