모든 nav에 responsive 밑줄 추가

--- a/component.html
+++ b/component.html
@@ -18,20 +18,19 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="main.html" style="width: 8%">HOME</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="assemble.html" style="width: 15%">PC 조립 가이드</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="booting.html" style="width: 15%">PC 부팅 가이드</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile" href="qna.html"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
 				style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-right"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-right w3-border-bottom"
 				href="aboutus.html" style="width: 10%">ABOUT US</a>
 		</nav>
 	</div>
