이거 fetch하지 마세요

--- a/assemble2.html
+++ b/assemble2.html
@@ -41,7 +41,7 @@
 				href="assemble2.html" class="w3-button w3-mobile">2. 메인보드에 CPU,
 				CPU 쿨러, RAM 장착</a> <a href="assemble3.html" class="w3-button w3-mobile">3.
 				케이스 분리 후 케이스에 PSU, 메인보드 장착</a> <a href="assemble4.html"
-				class="w3-button w3-mobile">4. 케이스에 ODD, SSD 장착</a> <a
+				class="w3-button w3-mobile">4. 케이블 연결 및 케이스에 ODD, SSD 장착</a> <a
 				href="assemble5.html" class="w3-button w3-mobile">5. 부품들 간의 케이블
 				정리 후 부팅해보기</a>
 		</div>
