footer 구분선 추가, about us right float 삭제

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,12 +29,12 @@
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
 				style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-right w3-border-bottom"
-				href="aboutus.html" style="width: 10%">ABOUT US</a>
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
 	<div class="row">
-		<section class="col-12 col-m-12 padding-2">
+		<section class="col-12 col-m-12 padding-2 w3-border-bottom">
 			<b>
 				<h2>ABOUT US</h2>
 			</b> 
@@ -53,15 +53,17 @@ IT학부 INFORMATION TECHNOLOGY
 최다헌 choi <b>DA</b> hun
 
 <h4><b>경력</b> PROFILE</h4>
-2017년 8월 교내 소프트웨어 경진대회 출전
 2017년 3~6월 성신 스터디 참여
+2017년 8월 교내 소프트웨어 경진대회 출전
 
-<b>참고</b> REFERENCE
+
+<h4><b>참고</b> REFERENCE</h4>
 <a href="http://www.danawa.com/">다나와닷컴 : http://www.danawa.com/</a>
-<a>성신여대 IT학부 김도형 교수님 PC조립 자료 : PC_Assembly_2016.pdf</a>
+<a href="">성신여대 IT학부 김도형 교수님 PC조립 자료 : PC_Assembly_2016.pdf</a>
+<a href="http://www.w3schools.com">W3schools : http://www.w3schools.com</a>
 <a href=""></a>
 <a href=""></a>
-<a href=""></a>
+
 			</pre>
 			</div>
 		</section>
