--- a/assemble3.html
+++ b/assemble3.html
@@ -30,8 +30,8 @@
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
 				style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-right w3-border-bottom"
-				href="aboutus.html" style="width: 10%">ABOUT US</a>
+				class="colorwhite w3-bar-item w3-button w3-mobile   w3-border-bottom"
+				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
 	<div class="row">
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div class="row w3-main" id="main">
-		<section>
+		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
 					onclick="w3_open()">☰ PC 조립 가이드</button>
