--- a/qna.html
+++ b/qna.html
@@ -31,12 +31,12 @@
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
 				style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-right w3-border-bottom"
-				href="aboutus.html" style="width: 10%">ABOUT US</a>
+				class="colorwhite w3-bar-item w3-button w3-mobile   w3-border-bottom"
+				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
 	<div class="row">
-		<section class="col-12 col-m-12 padding-2">
+		<section class="col-12 col-m-12 padding-2 w3-border-bottom">
 			<h3>자주 묻는 질문</h3>
 
 			<button onclick="myFunction('Demo1')"
