nav 현재 페이지 표시 추가 / 부팅가이드는 아직 안함

--- a/grapexpl.html
+++ b/grapexpl.html
@@ -20,7 +20,7 @@
 		<nav class="w3-bar w3-green">
 			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="main.html" style="width: 8%">HOME</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom w3-grey"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="assemble.html" style="width: 15%">PC 조립 가이드</a> <a
