--- a/qna.html
+++ b/qna.html
@@ -19,7 +19,8 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+			<a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="main.html" style="width: 8%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
@@ -29,8 +30,8 @@
 				href="booting.html" style="width: 15%">PC 부팅 가이드</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
-				style="width: 17%">자주 묻는 질문</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom w3-grey"
+				href="qna.html" style="width: 17%">자주 묻는 질문</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile   w3-border-bottom"
 				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
@@ -40,16 +41,16 @@
 			<h3>자주 묻는 질문</h3>
 
 			<button onclick="myFunction('Demo1')"
-				class="w3-button w3-block w3-white w3-left-align">Q1. +/-단자 구별
-				방법</button>
+				class="w3-button w3-block w3-white w3-left-align">Q1. +/-단자
+				구별 방법</button>
 			<div id="Demo1" class="w3-container w3-hide">
 				<p>A1. 주로 색으로 표현되어 있으나 간혹 삼각형과 같은 도형으로 표시되어 있는 경우가 있습니다. 그럴 경우
 					표시된 쪽이 주로 +단자입니다. (색으로 표시되어 있을 경우엔 빨간색 선이 +단자)</p>
 			</div>
 
 			<button onclick="myFunction('Demo2')"
-				class="w3-button w3-block w3-white w3-left-align">Q2. 백 패널 넣는
-				방법</button>
+				class="w3-button w3-block w3-white w3-left-align">Q2. 백 패널
+				넣는 방법</button>
 			<div id="Demo2" class="w3-container w3-hide">
 				<p>A2. 주변 장치의 포트의 모양과 크기에 맞추어 케이스 안에서부터 바깥 방향으로 밀어 끼웁니다. 아래쪽부터
 					끼우고 그 다음에 윗부분을 끼우는 것이 더 장착하기 쉽습니다.</p>
@@ -64,8 +65,8 @@
 			</div>
 
 			<button onclick="myFunction('Demo4')"
-				class="w3-button w3-block w3-white w3-left-align">Q4. 부품 조립이
-				끝난 후 전원이 안 켜지는 경우</button>
+				class="w3-button w3-block w3-white w3-left-align">Q4. 부품
+				조립이 끝난 후 전원이 안 켜지는 경우</button>
 			<div id="Demo4" class="w3-container w3-hide">
 				<p>A4.</p>
 				<p>1) 파워 서플라이의 전원 커넥터의 연결상태를 확인한다.</p>
@@ -75,11 +76,11 @@
 			</div>
 
 			<button onclick="myFunction('Demo5')"
-				class="w3-button w3-block w3-white w3-left-align">Q5. USB 연결
-				포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할 연결 방법</button>
+				class="w3-button w3-block w3-white w3-left-align">Q5. USB
+				연결 포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할 연결 방법</button>
 			<div id="Demo5" class="w3-container w3-hide">
-				<p>A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다. 3.0을 지원할 경우 3.0포트 하나에만 연결해야 하고
-					2.0을 지원할 경우엔 2.0포트 두 개에 연결하면 됩니다.</p>
+				<p>A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다. 3.0을 지원할 경우 3.0포트 하나에만 연결해야
+					하고 2.0을 지원할 경우엔 2.0포트 두 개에 연결하면 됩니다.</p>
 			</div>
 	</div>
 
