--- a/ramexpl.html
+++ b/ramexpl.html
@@ -20,7 +20,7 @@
 			<nav class="w3-bar w3-green">
 				<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="main.html" style="width: 8%">HOME</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom w3-grey"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="assemble.html" style="width: 15%">PC 조립 가이드</a> <a
@@ -30,7 +30,7 @@
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
 				style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile   w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
