--- a/booting.html
+++ b/booting.html
@@ -18,7 +18,8 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+			<a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="main.html" style="width: 8%">HOME</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
@@ -28,8 +29,8 @@
 				href="booting.html" style="width: 15%">PC 부팅 가이드</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
 				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom" href="qna.html"
-				style="width: 17%">자주 묻는 질문</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				href="qna.html" style="width: 17%">자주 묻는 질문</a> <a
 				class="colorwhite w3-bar-item w3-button w3-mobile w3-right w3-border-bottom"
 				href="aboutus.html" style="width: 10%">ABOUT US</a>
 		</nav>
@@ -51,39 +52,27 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="" title="" alt="1" />
-					<div class="w3-display-bottom">운영체제 설명</div>
+					<img src="https://goo.gl/2RogPb" title="https://goo.gl/2RogPb" alt="1" />
+					<div class="w3-display-bottom">컴퓨터에 설치된 운영체제 정보</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="" title="" alt="2" />
-					<div class="w3-display-bottom">운영체제 설명</div>
+					<img src="https://goo.gl/71uUKg" title="https://goo.gl/71uUKg" alt="2" />
+					<div class="w3-display-bottom">
+					<pre>운영체제 설치에 필요한 것은 설치 미디어, 제품키, 매뉴얼 등이다. 
+설치 미디어로는 CD, USB가 있는데 요즘은 ODD를 장착하지 않는 경우가 많기 때문에 USB 형태가 많다.</pre>
+					</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img class="expl" src="" title="" alt="3" />
-					<div class="w3-display-bottom">운영체제 설명</div>
+					<img src="https://goo.gl/GdSiHX" title="https://goo.gl/GdSiHX" alt="3" />
+					<div class="w3-display-bottom">위 제품은 USB 3.0 지원</div>
 				</div>
 			</div>
-
-			<div class=w3-center>
-				<div class="mySlides">
-					<img class="expl" src="" title="" alt="4" />
-					<div class="w3-display-bottom">운영체제 설명</div>
-				</div>
-			</div>
-
-			<div class=w3-center>
-				<div class="mySlides">
-					<img class="expl" src="" title="" alt="5" />
-					<div class="w3-display-bottom">운영체제 설명</div>
-				</div>
-			</div>
-
 
 
 			<div class="w3-center">
@@ -94,8 +83,6 @@
 				<button class="w3-button demo" onclick="currentDiv(1)">1</button>
 				<button class="w3-button demo" onclick="currentDiv(2)">2</button>
 				<button class="w3-button demo" onclick="currentDiv(3)">3</button>
-				<button class="w3-button demo" onclick="currentDiv(4)">4</button>
-				<button class="w3-button demo" onclick="currentDiv(5)">5</button>
 			</div>
 
 		</section>
