부팅 가이드 수정 *최신* 밑에 border추가 & alt 이름 바꿈

--- a/booting.html
+++ b/booting.html
@@ -43,7 +43,7 @@
 		</div>
 	</div>
 	<div class="row w3-main" id="main">
-		<section>
+		<section class="w3-border-bottom">
 			<div class="w3-teal w3-light-grey">
 				<button class="w3-button w3-teal w3-large w3-light-grey"
 					onclick="w3_open()">☰ PC 부팅 가이드</button>
@@ -52,14 +52,14 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/2RogPb" title="https://goo.gl/2RogPb" alt="1" />
+					<img src="https://goo.gl/2RogPb" title="https://goo.gl/2RogPb" alt="OS" />
 					<div class="w3-display-bottom">컴퓨터에 설치된 운영체제 정보</div>
 				</div>
 			</div>
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/71uUKg" title="https://goo.gl/71uUKg" alt="2" />
+					<img src="https://goo.gl/71uUKg" title="https://goo.gl/71uUKg" alt="OSexpl1" />
 					<div class="w3-display-bottom">
 					<pre>운영체제 설치에 필요한 것은 설치 미디어, 제품키, 매뉴얼 등이다. 
 설치 미디어로는 CD, USB가 있는데 요즘은 ODD를 장착하지 않는 경우가 많기 때문에 USB 형태가 많다.</pre>
@@ -69,7 +69,7 @@
 
 			<div class=w3-center>
 				<div class="mySlides">
-					<img src="https://goo.gl/GdSiHX" title="https://goo.gl/GdSiHX" alt="3" />
+					<img src="https://goo.gl/GdSiHX" title="https://goo.gl/GdSiHX" alt="OSexpl2" />
 					<div class="w3-display-bottom">위 제품은 USB 3.0 지원</div>
 				</div>
 			</div>
@@ -80,9 +80,11 @@
 					<button class="w3-button" onclick="plusDivs(-1)">❮ Prev</button>
 					<button class="w3-button" onclick="plusDivs(1)">Next ❯</button>
 				</div>
+				<div class="w3-border-top">
 				<button class="w3-button demo" onclick="currentDiv(1)">1</button>
 				<button class="w3-button demo" onclick="currentDiv(2)">2</button>
 				<button class="w3-button demo" onclick="currentDiv(3)">3</button>
+				</div>
 
 			</div>
 
