--- a/qna.html
+++ b/qna.html
@@ -41,7 +41,7 @@
 			<h3>자주 묻는 질문</h3>
 
 			<button onclick="myFunction('Demo1')"
-				class="w3-button w3-block w3-white w3-left-align">Q1. +/-단자
+				class="w3-button w3-block w3-white w3-left-align w3-border-top">Q1. +/-단자
 				구별 방법</button>
 			<div id="Demo1" class="w3-container w3-hide">
 				<p>A1. 주로 색으로 표현되어 있으나 간혹 삼각형과 같은 도형으로 표시되어 있는 경우가 있습니다. 그럴 경우
@@ -49,7 +49,7 @@
 			</div>
 
 			<button onclick="myFunction('Demo2')"
-				class="w3-button w3-block w3-white w3-left-align">Q2. 백 패널
+				class="w3-button w3-block w3-white w3-left-align w3-border-top">Q2. 백 패널
 				넣는 방법</button>
 			<div id="Demo2" class="w3-container w3-hide">
 				<p>A2. 주변 장치의 포트의 모양과 크기에 맞추어 케이스 안에서부터 바깥 방향으로 밀어 끼웁니다. 아래쪽부터
@@ -57,7 +57,7 @@
 			</div>
 
 			<button onclick="myFunction('Demo3')"
-				class="w3-button w3-block w3-white w3-left-align">Q3. CMOS
+				class="w3-button w3-block w3-white w3-left-align w3-border-top">Q3. CMOS
 				BIOS에서 시스템 종료의 가능 여부</button>
 			<div id="Demo3" class="w3-container w3-hide">
 				<p>A3. CMOS BIOS는 따로 시스템을 종료할 수 있는 기능이 없으므로 본체의 파워 버튼을 이용해 종료시켜야
@@ -65,7 +65,7 @@
 			</div>
 
 			<button onclick="myFunction('Demo4')"
-				class="w3-button w3-block w3-white w3-left-align">Q4. 부품
+				class="w3-button w3-block w3-white w3-left-align w3-border-top">Q4. 부품
 				조립이 끝난 후 전원이 안 켜지는 경우</button>
 			<div id="Demo4" class="w3-container w3-hide">
 				<p>A4.</p>
@@ -76,7 +76,7 @@
 			</div>
 
 			<button onclick="myFunction('Demo5')"
-				class="w3-button w3-block w3-white w3-left-align">Q5. USB
+				class="w3-button w3-block w3-white w3-left-align w3-border-top w3-border-bottom">Q5. USB
 				연결 포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할 연결 방법</button>
 			<div id="Demo5" class="w3-container w3-hide">
 				<p>A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다. 3.0을 지원할 경우 3.0포트 하나에만 연결해야
