about us 수정 (뷰티파이 하지말것!!)

--- a/aboutus.html
+++ b/aboutus.html
@@ -44,27 +44,20 @@
 					title="https://goo.gl/m5XoZY" alt="LOGO" />
 			</div>
 			<div>
-				<pre>
-				
-				
-<h4>
-						<b>이차가다 LEECHAGADA</b>
-					</h4>
-성신여자대학교 SUNGSHIN WOMEN’S UNIVERSTIY
-IT학부 INFORMATION TECHNOLOGY
-이현정 <b>LEE</b> hyunjung
-차지헌 <b>CHA</b> jihun
-김가인 kim <b>GA</b> in
-최다헌 choi <b>DA</b> hun
+				<pre><h4><b>LEECHAGADA</b> 이차가다</h4>
+SUNGSHIN WOMEN’S UNIVERSTIY 성신여자대학교
+INFORMATION TECHNOLOGY IT학부
+<b>LEE</b> hyunjung 이현정
+<b>CHA</b> jihun 차지헌
+kim <b>GA</b> in 김가인
+choi <b>DA</b> hun 최다헌
 
-<h4>
-						<b>경력</b> PROFILE</h4>
+<h4><b>PROFILE</b> 경력</h4>
 2017년 3~6월 성신 스터디 참여
 2017년 8월 교내 소프트웨어 경진대회 출전
 
 
-<h4>
-						<b>참고</b> REFERENCE</h4>
+<h4><b>REFERENCE</b> 참고</h4>
 <a href="http://www.danawa.com/">다나와닷컴 : http://www.danawa.com/</a>
 <a href="">성신여대 IT학부 김도형 교수님 PC조립 자료 : PC_Assembly_2016.pdf</a>
 <a href="http://www.w3schools.com">W3schools : http://www.w3schools.com</a>
