제품 추천 페이지로 이름 바꿈 / 등등

--- a/officeRecommend.html
+++ b/officeRecommend.html
@@ -6,7 +6,6 @@
 <base href="소경"></base>
 <title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
-<link rel="stylesheet" type="text/css" href="table.css" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script type="text/javascript" src="loadXML.js"></script>
 <!-- [if lt IE 9]>
@@ -19,29 +18,46 @@
 			<a href="main.html">PASS</a>
 		</header>
 		<nav class="w3-bar w3-green">
-			<a class="colorwhite w3-bar-item w3-button w3-mobile"
-				href="main.html" style="width: 8%">HOME</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+			<a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+				href="main.html" style="width: 9%">HOME</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="assemble.html" style="width: 15%">PC 조립 가이드</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="booting.html" style="width: 15%">PC 부팅 가이드</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile"
-				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile" href="qna.html"
-				style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-right"
-				href="aboutus.html" style="width: 10%">ABOUT US</a>
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top w3-grey"
+				href="recommendation.html" style="width: 17%">용도별 제품 추천</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+				href="qna.html" style="width: 17%">자주 묻는 질문</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
-
-<div id="example"></div>
-
-
 	<div class="row">
-		<footer class="col-12 col-m-12"> copyright 2017. LEECHAGADA.
-			All rights reserved.</footer>
+		<div class="w3-mobile" id="mySidebar">
+			<button onclick="w3_close()" class="w3-button">Close&times;</button>
+			<a href="recommendation.html" class="w3-button w3-mobile">공통 제품 추천</a> <a
+				href="officeRecommend.html" class="w3-button w3-mobile">사무용 제품 추천</a> <a
+				href="gameRecommend.html" class="w3-button w3-mobile">게임용 제품 추천</a> <a
+
+		</div>
 	</div>
+	<div class="row w3-main" id="main">
+		<section class="w3-border-bottom">
+			<div class="w3-teal w3-light-grey">
+				<button class="w3-button w3-teal w3-large w3-light-grey"
+					onclick="w3_open()">☰</button>
+				<h3 class="w3-container">사무용 제품 추천</h3>
+			</div>
+
+			<div id="example"></div>
+
+		</section>
+		<div class="row">
+			<footer class="col-12 col-m-12"> copyright 2017. LEECHAGADA.
+				All rights reserved.</footer>
+		</div>
 </body>
 </html>
