--- a/qna.html
+++ b/qna.html
@@ -20,24 +20,24 @@
 		</header>
 		<nav class="w3-bar w3-green">
 			<a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
-				href="main.html" style="width: 8%">HOME</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+				href="main.html" style="width: 9%">HOME</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="component.html" style="width: 15%">PC 부품 설명</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="assemble.html" style="width: 15%">PC 조립 가이드</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="booting.html" style="width: 15%">PC 부팅 가이드</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom"
-				href="recommendation.html" style="width: 18%">용도별 맞춤 조립 PC 추천</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-bottom w3-grey"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
+				href="recommendation.html" style="width: 17%">용도별 제품 추천</a> <a
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top w3-grey"
 				href="qna.html" style="width: 17%">자주 묻는 질문</a> <a
-				class="colorwhite w3-bar-item w3-button w3-mobile   w3-border-bottom"
+				class="colorwhite w3-bar-item w3-button w3-mobile w3-border-top"
 				href="aboutus.html" style="width: 12%">ABOUT US</a>
 		</nav>
 	</div>
 	<div class="row">
-		<section class="col-12 col-m-12 padding-2 w3-border-bottom">
+		<section class="col-12 col-m-12 padding-2">
 			<h3>자주 묻는 질문</h3>
 
 			<button onclick="myFunction('Demo1')"
