조립가이드 드디어 다 완성!! 단자와 포트의 차이는 꽂는 것과 꽂히는 것의 차이

--- a/assemble5.html
+++ b/assemble5.html
@@ -62,8 +62,8 @@
 					<div class="w3-display-bottom">
 						<pre>케이스에 내장된 케이블을 메인보드에 연결
 						
-<b>전기적 손상이 있을 수 있기 때문에 USB 3.0 포트와 USB 2.0 포트 중 한 개만 연결할 것에 주의한다.</b>
-여기서 말하는 2.0 포트는 3.0포트와 같이 딸려 있는 포트를 말하는 것이다.</pre>
+<b>전기적 손상이 있을 수 있기 때문에 USB 3.0 단자와 USB 2.0 단자 중 한 개만 연결할 것에 주의한다.</b>
+여기서 말하는 2.0 단자는 3.0단자와 같이 딸려 있는 단자를 말하는 것이다.</pre>
 					</div>
 				</div>
 			</div>
@@ -73,7 +73,7 @@
 					<img src="https://goo.gl/L2sWMm" title="https://goo.gl/L2sWMm"
 						alt="USBcable2" />
 					<div class="w3-display-bottom">
-						<pre>케이스가 3.0을 지원한다면 3.0 포트와 2.0 포트를 메인보드에 연결하고 2.0 밖에 지원하지 않는다면 2.0과 2.0을 두 개 연결한다.</pre>
+						<pre>케이스가 3.0을 지원한다면 3.0 단자와 2.0 단자를 메인보드에 연결하고 2.0 밖에 지원하지 않는다면 2.0과 2.0을 두 개 연결한다.</pre>
 					</div>
 				</div>
 			</div>
@@ -84,7 +84,7 @@
 						alt="cables" />
 					<div class="w3-display-bottom">
 						<pre>
-케이블의 종류에는 USB 3.0 포트, USB 2.0 포트, HDD LED 포트, RESET 포트, POWER LED 포트, POWER SW 포트, HD AUDIO 포트, SPEAKER 포트 등이 있다.</pre>
+케이블의 종류에는 USB 3.0 단자, USB 2.0 단자, HDD LED 단자, RESET 단자, POWER LED 단자, POWER SW 단자, HD AUDIO 단자, SPEAKER 단자 등이 있다.</pre>
 					</div>
 				</div>
 			</div>
@@ -128,7 +128,7 @@
 					<img src="https://goo.gl/665Hvp" title="https://goo.gl/665Hvp"
 						alt="cableclear3" />
 					<div class="w3-display-bottom">
-						<pre>케이스의 판을 닫아준다.</pre>
+						<pre>케이스의 옆면을 닫아준다.</pre>
 					</div>
 				</div>
 			</div>
