--- a/recommendation.html
+++ b/recommendation.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<meta charset="UTF-8" name="viewport"
+	content="width=device-width, initial-scale=1.0">
+<base href="소경"></base>
+<title>PASS</title>
 <link rel="stylesheet" type="text/css" href="passcss.css" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script type="text/javascript" src="loadXML.js"></script>
+<!-- [if lt IE 9]>
+        <script src="html5shiv.js"></script>
+   <![endif]-->
 </head>
 <body onload="displayResult('recommendation.xsl')">
 	<div class="row">
