단자와 포트의 차이(꽂는 것과 꽂히는 것의 차이) qna 수정

--- a/assemble4.html
+++ b/assemble4.html
@@ -174,7 +174,7 @@
 					<img src="https://goo.gl/cNsBtx" title="https://goo.gl/cNsBtx"
 						alt="case_SSD4" />
 					<div class="w3-display-bottom">
-						<pre>위의 사진은 ODD와 SSD에 연결할 PSU에 내장된 SATA 전원 케이블이다.</pre>
+						<pre>위의 사진은 ODD와 SSD에 연결할 PSU의 SATA 전원 케이블이다.</pre>
 					</div>
 				</div>
 			</div>
