--- a/qna.html
+++ b/qna.html
@@ -79,7 +79,7 @@
 				class="w3-button w3-block w3-white w3-left-align w3-border-top w3-border-bottom">Q5. USB
 				연결 포트 종류가 2.0, 3.0 두 가지로 구성되어 있는데 이때 주의해야 할 연결 방법</button>
 			<div id="Demo5" class="w3-container w3-hide">
-				<p>A5. 마더보드와 케이스의 버전에 따라 연결을 달리합니다.</p>
+				<p>A5. 메인보드와 케이스의 버전에 따라 연결을 달리합니다.</p>
 				<p>1) 케이스의 USB 연결 포트가 3.0을 지원하는 경우 : '3.0 단자에 2.0 단자가 달려있는 케이블'과 '2.0 단자 케이블'이 있을 것입니다. 
 				3.0 단자에 달려있는 2.0 단자를 3.0 단자와 함께 사용할 경우 쇼트가 일어날 수 있기 때문에 <b>3.0 단자에 달려있는 2.0 단자는 사용하지 말고</b>
 				나머지 '2.0단자 케이블' (3.0포트에 달려있지 않은 것)을 사용하면 됩니다.   
