--- a/assemble5.html
+++ b/assemble5.html
@@ -94,7 +94,7 @@
 						alt="cables_motherboard" />
 					<div class="w3-display-bottom">
 						<pre>케이스에 내장된 케이블을 메인보드에 연결한다.
-+ / - 단자를 잘 맞춰서 꽂아주어야 한다. (보통 색으로 구분되거나 조그마한 표시로 구분되어 있음)
++ / - 표시가 있는 단자는 잘 맞춰서 꽂아주어야 한다. (보통 색으로 구분되거나 조그마한 표시로 구분되어 있음)
 <b>HDD LED와 POWER LED 또는 POWER LED와 POWER SW(스위치 버튼)를 헷갈리지 말 것에 주의한다.</b>
 만약 POWER LED와 POWER SW를 바꿔 끼거나 잘 못 끼웠다면 전원 버튼을 눌러도 전원이 들어오지 않을 것이다.</pre>
 					</div>
