--- a/recommendation.html
+++ b/recommendation.html
@@ -40,7 +40,7 @@
 			<a href="recommendation.html" class="w3-button w3-mobile"></a> <a
 				href="officeRecommend.html" class="w3-button w3-mobile">사무/가정용
 				제품 추천</a> <a href="gameRecommend.html" class="w3-button w3-mobile">게임용
-				제품 추천</a> <a
+				제품 추천</a>
 		</div>
 	</div>
 	<div class="row w3-main" id="main">
@@ -57,5 +57,7 @@
 			<footer class="col-12 col-m-12"> copyright 2017. LEECHAGADA.
 				All rights reserved.</footer>
 		</div>
+	</div>
+
 </body>
 </html>
