recommend 다시 수정

--- a/gameRecommend.html
+++ b/gameRecommend.html
@@ -37,7 +37,7 @@
 	<div class="row">
 		<div class="w3-mobile" id="mySidebar">
 			<button onclick="w3_close()" class="w3-button">Close&times;</button>
-			<a href="recommendation.html" class="w3-button w3-mobile"></a> <a
+			<a href="recommendation.html" class="w3-button w3-mobile">기본 구성 제품 추천</a> <a
 				href="officeRecommend.html" class="w3-button w3-mobile">사무/가정용
 				제품 추천</a> <a href="gameRecommend.html" class="w3-button w3-mobile">게임용
 				제품 추천</a>
